--- a/Encyclopaedia Britannica/Nineteenth-Century Knowledge Project/Create_DataFrame_7ed_EB.ipynb
+++ b/Encyclopaedia Britannica/Nineteenth-Century Knowledge Project/Create_DataFrame_7ed_EB.ipynb
@@ -385,14 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 210,
    "outputs": [],
    "source": [
     "def create_term_info(start_page_num, term_name, description, position):\n",
     "    note, name, alter_names = parse_term_name(term_name)\n",
     "    description = description.strip()\n",
     "    reference_terms = extract_reference_term_name(description)\n",
-    "    end_page_num = extract_page_num(description)\n",
+    "    description, end_page_num = extract_page_num(description)\n",
     "    if end_page_num == -1:\n",
     "        end_page_num = start_page_num\n",
     "    # 0\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 214,
    "outputs": [
     {
      "name": "stdout",
@@ -685,9 +685,9 @@
     "    [{'note': None, 'name': 'ADANSONIA', 'alter_names': ['ETHIOPIAN SOUR-GOURD', 'MONKEYS-BREAD', 'AFRICAN CALABASH-TREE'], 'number_of_words': 0, 'reference_terms': []}],\n",
     "    [{'note': None, 'name': 'AID, AUXILIUM', 'alter_names': [], 'number_of_words': 14, 'reference_terms': []},\n",
     "    {'note': None, 'name': 'AID-DE-CAMP', 'alter_names': [], 'number_of_words': 15, 'reference_terms': []}],\n",
-    "    [{'note': None, 'name': 'TELEGRAPH', 'alter_names': [], 'number_of_words': 5520, 'reference_terms': []}],\n",
-    "    [{'note': None, 'name': 'ANIMALCULE', 'alter_names': [], 'number_of_words': 14015, 'reference_terms': []}],\n",
-    "    [{'note': None, 'name': 'DAIRY', 'alter_names': [\"DAIRYING\"], 'number_of_words': 7585, 'reference_terms': []}],\n",
+    "    [{'note': None, 'name': 'TELEGRAPH', 'alter_names': [], 'number_of_words': 5519, 'reference_terms': []}],\n",
+    "    [{'note': None, 'name': 'ANIMALCULE', 'alter_names': [], 'number_of_words': 14011, 'reference_terms': []}],\n",
+    "    [{'note': None, 'name': 'DAIRY', 'alter_names': [\"DAIRYING\"], 'number_of_words': 7582, 'reference_terms': []}],\n",
     "    [{'note': None, 'name': 'AARON', 'alter_names': [], 'number_of_words': 354, 'reference_terms': []},\n",
     "     {'note': None, 'name': 'AARON', 'alter_names': [], 'number_of_words': 52, 'reference_terms': []},\n",
     "     {'note': None, 'name': 'AARON', 'alter_names': [], 'number_of_words': 27, 'reference_terms': []},\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 215,
    "outputs": [],
    "source": [
     "# Get each text file\n",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 217,
    "outputs": [
     {
      "name": "stdout",
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 218,
    "outputs": [
     {
      "name": "stdout",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,10 +1647,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "outputs": [],
    "source": [
-    "expected_topics = ['ABACUS', 'ABBREVIATION','ABYSSINIA', 'ACADEMY', 'ACCENT', 'ACHROMATIC GLASSES', 'ACOUSTICS', 'ADDISON', , 'ADMIRAL', 'ADMIRALTY','HYDRODYNAMICS', 'HYGROMETRY', 'ICELAND', 'ICHTHYOLOGY', 'INDEPENDENTS', 'INDIANA', 'INK', 'INQUISITION', 'SIGNATURES', 'TABLE', 'OMISSIONSANDCORRECTIONS', 'GENERALINDEX', 'INDEXCAP', 'ABEABE', 'ABERRATION',  'BACCA',  'AERONAUTICS', 'ETNA', 'AFGHANISTAN', 'AFRICA', 'AGRICULTURE', 'ANATOMY', 'ANATOMYVEGETABLE', 'ANCHOR', 'ANDES', 'ANGLING', 'ANIMALKINGDOM', 'ANIMALCULE', 'ANNUITIES', 'ANTIQUITIES', 'ANTANT', 'LTA', 'APPARITIONS', 'AQUATOFANA', 'AQUSG', 'AQITEDT', 'AQUEDUCT', 'ARABIA', 'ARACHNIDES', 'RABELAIS', 'RACINE', 'RAILWAYS', 'RASRAS', 'REFORMATION', 'REGISTRATION', 'REIREI', 'RELIGIOUSMISSIONS', 'RENNIE', 'REPTILIA', 'RESISTANCEOFFLUIDS', 'RETICULATION', 'ASTRONOMY', 'LAGRANGE', 'LAING', 'LALANDE', 'LAMBERT', 'LAMP', 'LANCASHIRE', 'LANGUAGE', 'LAPLAND', 'LAUGHTER', 'LAWNATIONS', 'LAWOFNATIONS', 'LEALEASL', 'LEEDS', 'LEGISLATION', 'LEIBNITZ', 'LEIGHTON', 'LEITH', 'LEITRIM', 'LESLIE', 'LEVEL', 'LEYDEN', 'LIBERTYOFTHEPRESS', 'LIBRARIES', 'LIFEPRE', 'LIFEPRESERVERS', 'LIGHT', 'LINDSAY', 'LINEN', 'LINNJEUS', 'LIPSIUS', 'LITHOGRAPHY', 'L', 'LIVERPOOL', 'LOCKE', 'LOGARITHMS', 'LOGLOGLS', 'LOGIC', 'LOMBARDY', 'LONDON', 'LONGITUDE', 'LOUISIANA', 'LUTHER', 'LYDIA', 'MACEDONIA', 'MACHIAVELLI', 'MACKINTOSH', 'MCIIE', 'MCRIE', 'MADAGASCAR', 'MAGMAG', 'MAGNETISM', 'DIAMOND', 'DICTIONARY', 'DIDP', 'DIETETICS', 'DISTILLATION', 'DIVINGBELL', 'DOCK', 'DOCKYARDS', 'DOLOMIEU', 'STDOMINGO', 'DONGOLA', 'DOR', 'DOUGLAS', 'DOWN', 'DRAINING', 'DRAMA', 'DRAWING', 'DREAMS', 'DREDGING', 'DRUGGET', 'DRUIDS', 'DRUDRU', 'DRUMMOND', 'DRUSES', 'DRYDEN', 'DRYROT', 'DUBLIN', 'DUHDUH', 'DUMONT', 'DUNBAR', 'DUNCAN', 'DYEING', 'DYNAMICS', 'ECONOMISTS', 'EDINBURGH', 'EDUCATION', 'EDWARDS', 'DCTT', 'EGYPT', 'ODGC', 'ELECTRICITY', 'EMBANKMENT', 'EMIGRATION', 'ENCAUSTICPAINTING', 'ENGLAND', 'PJLATECCTREE', 'KCYPT', 'ELLIPTOGRAPH', 'MAGNETISMANIMAL', 'MAHOMMED', 'MAHOMMEDANISM', 'MAIMAIRC', 'MALTA', 'MALTHUS', 'AH', 'MAMMALIA', 'CALENDAR', 'CAMERON', 'CAMC', 'CAMPER', 'CANADA', 'CANARIES', 'PNNING', 'CANON', 'CANOVA', 'CANTON', 'CAPILLARYACTION', 'CARPENTRY', 'FRANCE', 'FRANKLIN', 'FREDERICK', 'SYSTEM', 'FUNDINGSYSTEM', 'FURTRADE', 'FURNACE', 'GALILEO', 'GALWAY', 'GARDENING', 'GL', 'GASLIGHT', 'INTRODUCTION', 'GEOGRAPHY', 'GEOMETRY', 'GERMANY', 'GIBBON', 'GILDTNG', 'GLASGOW', 'GLASS', 'GLOUCESTERSHIRE', 'GOETHE', 'GOL', 'SCAPEOFGOODHOPE', 'GOTHS', 'GOVERNMENT', 'GRAMMAR', 'GRANDEUR', 'GREECE', 'GREENLAND', 'GRENVILLE', 'MMUSHTSFURNACE', 'GASGHT', 'PAPALSTATES', 'PAPER', 'PAPERMONEY', 'PARA', 'PARAGUAY', 'PARUPC', 'PARIS', 'PARLIAMENT', 'PARR', 'PARTHIA', 'PATAGONIA', 'PATHOLOGYGENERAL', 'PATRONAGE', 'PAUL', 'PAULOSAN', 'PEE', 'PELASGI', 'PENDULUM', 'PENNSYLVANIA', 'PERGAMUS', 'PERNAMBUCO', 'PERSIA', 'PERSPECTIVE', 'PLATALA', 'PLATO', 'PLAYFAIR', 'PLAYHOUSE', 'PLEASURE', 'IT', 'PLYMOUTH', 'PNEUMATICS', 'PESPP', 'POETRY', 'POISON', 'POLAND', 'POLARSEAS', 'POLARISATIONOFLIGHT', 'POLICE', 'PARTI', 'POLITICALECONOMY', 'POLYGAMY', 'POLYNESIA', 'POLYTHEISM', 'POMPEII', 'PONTUS', 'POORLAWS', 'POPE', 'POPULATION', 'POPULATIONOFTHEUNITEDSTATES', 'PORCELAIN', 'PORISM', 'PORSON', 'POR', 'PORTUGAL', 'POSTOFFICE', 'PRECESSION', 'PREROGATIVE', 'PRESBYTERIANS', 'PRIPRI', 'PRINTING', 'PRISONS', 'PROBABILITY', 'PROJECTILES', 'PROPERTY', 'PROVIDENCE', 'PRUSSIA', 'PUMP', 'PUNISHMENT', 'PYROMETER', 'PYTPYT', 'ERSD', 'QUAKERS', 'QUANTITY', 'QUESNAY', 'I', 'GROTIUS', 'GUATIMALA', 'GUNMAKING', 'GUNNERY', 'GUNPOWDER', 'GUYTONDEMORVEAU', 'HADHAD', 'HALL', 'HANOVER', 'HAPIIAP', 'HASTINGS', 'HEAT', 'HEBRIDES', 'HEISJ', 'HELMINTHOLOGY', 'FART', 'UACIYPHICS', 'BORING', 'BORBORBOR', 'BORNOU', 'BOSBOSBOS', 'BOSWELL', 'BOTANY', 'ENGLAND', 'ENGLISHLANGUAGE', 'ENGRAVING', 'ENTOMOLOGY', 'EQUATIONS', 'ERASMUS', 'ETHIOPIANNATIONS', 'ETRUSCANS', 'EUGENE', 'EUROPE', 'EVAPORATION', 'EXCHANGE', 'FABFAB', 'FAIFAI', 'FENCING', 'FENELON', 'FERGUSON', 'FERMANAGH', 'FEUDALLAW', 'FEZFEZ', 'FEZZAN', 'FICHTE', 'SECTIONI', 'FIGUREOFTHEEARTH', 'FILTER', 'FISHERIES', 'FLORIDA', 'FLUXIONS', 'FOLARD', 'FOOD', 'FORBES', 'FORFAR', 'VITRIFIEDFORTS', 'FORTIFICATION', 'FORIFATION', 'COHESION', 'COHC', 'T', 'COINAGE', 'COLD', 'COLLIERY', 'COLOMBIA', 'COLONY', 'COLUMBUS', 'COMET', 'COMCOM', 'COMCOMC', 'COMMERCE', 'COMPANY', 'COMPLEXION', 'CONDE', 'CONDILLAC', 'INTRODUCTION', 'CONICSECTIONS', 'CONCON', 'CONSTANTINOPOLITANHISTORY', 'COOK', 'COPERNICUS', 'COPYRIGHT', 'SCORG', 'CORK', 'CORNLAWSANDCORNTRADE', 'CORPOREAL', 'COTTAGESYSTEM', 'COTTONMANUFACTURE', 'COULOMB', 'CRAIG', 'CRANMER', 'CSCRACRAW', 'CRAYONPAINTING', 'CREDIT', 'CRETE', 'CRICHTON', 'CRUSADES', 'CRYSTALLIZATION', 'CUBA', 'CUJAS', 'CULLEN', 'CUMBERLAND', 'CUNNINGHAM', 'CUSTOMANDHABIT', 'CUTCH', 'CUTCUV', 'CUVIER', 'DAIRY', 'DALRYMPLE', 'DAMASCUS', 'DANTON', 'DARIEN', 'DAVY', 'DEAFANDDUMB', 'DEFOE', 'DEFORMITY', 'DELHI', 'DELUGE', 'DEMERARA', 'DEMPSTER', 'DENMARK', 'DERDER', 'DERBY', 'DERBYSHIRE', 'DEW', 'DIALLING', 'MICMICMA', 'MICROMETER', 'SWEDEN', 'SWIFT', 'SWISWISWI', 'SWITZERLAND', 'SYRACUSE', 'SYRIA', 'TANNING', 'TARTARY', 'TEA', 'TELEGRAPH', 'TELESCOPE', 'TENNANT', 'THEATRE', 'THEBES', 'THEOLOGY', 'THERMOMETER', 'THOMPSON', 'T', 'TIBET', 'TIDES', 'TIMBER', 'TIPPERARY', 'TONNAGE', 'AT', 'TOOKE', 'TRIGONOMETRICALSURVEY', 'AFAB', 'TRIGONOMETRY', 'TRUMPET', 'TUNNEL', 'TURKEY', 'TYPEFOUNDING', 'TYRONE', 'UNITEDSTATES', 'UNIVERSITIES', 'VALDENSES', 'VALDO', 'VANDIEMENSLAND', 'VARIATIONS', 'VEGETABLEPHYSIOLOGY', 'VENTILATION', 'VERMIN', 'VERULAM', 'VETERINARYSCIENCE', 'VIEL', 'VIRGIL', 'VOLTAICELECTRICITY', 'WALESNEWSOUTH', 'WALLER', 'WARBURTON', 'WATERWORKS', 'WATERFORD', 'WATT', 'WEAVING', 'WEBPEWS', 'WEIGHINGMACHINES', 'WEIGHTSANDMEASURES', 'WESTMEATH', 'WEXFORD', 'WICKLOW', 'WINEMAKING', 'WURTEMBERG', 'WYCLIFFE', 'YORK', 'YOUNG', 'ZEALANDNEW', 'ZOOPHYTES', 'SCULPTURE', 'SEALIGHTS', 'SEAMANSHIP', 'SECEDERS', 'SELSEEGC', 'SENSES', 'SERIES', 'SERPENTS', 'SEVLN', 'SHAKSPEARE', 'SHASIIAWS', 'SIIERIDAN', 'SHESHE', 'SHESHIMMS', 'SHIPBUILDING', 'SHOOTING', 'SIAM', 'SIBERIA', 'SIGNALS', 'TTQRMSIEQI', 'SILK', 'SILKWOIM', 'SILKWORM', 'SIMSON', 'SINDE', 'SINSIN', 'SKENE', 'SLAVERY', 'SLIGO', 'SLOANE', 'SMELLIE', 'SMELTING', 'SMITH', 'SMOKE', 'SOCRATES', 'SOMSOMSOMSOM', 'SOUND', 'SPAIN', 'SPARTA', 'SPENSER', 'SPINNING', 'NAVIGATIONINLAND', 'NAVY', 'RATESOFHALFPAY', 'NECNECG', 'NELSON', 'NEPAUL', 'NESU', 'NETHERLANDS', 'NEWBRUNSWICK', 'NEWCASTLE', 'NEWFOUNDLAND', 'NEWSPAPERS', 'NEWTON', 'NEWYORK', 'NIEBUHR', 'NIGER', 'NILE', 'NOB', 'NORWAY', 'NORWICH', 'NOVASCOTIA', 'NUBIA', 'NUMNUM', 'NUMIDIA', 'OHIO', 'OPTICS', 'ORACLE', 'ORDEAL', 'OREGON', 'ORGAN', 'ORKNEY', 'ORNITHOLOGY']"
+    "expected_topics = ['ABACUS', 'ABBREVIATION','ABYSSINIA', 'ACADEMY', 'ACCENT', 'ACHROMATIC GLASSES', 'ACOUSTICS', 'ADDISON', 'ADMIRAL', 'ADMIRALTY','HYDRODYNAMICS', 'HYGROMETRY', 'HISTORY OF SCOTLAND', 'FIGURE OF THE EARTH', 'ICELAND', 'ICHTHYOLOGY', 'INDEPENDENTS', 'INDIANA', 'INK']"
    ],
    "metadata": {
     "collapsed": false
@@ -1662,6 +1662,36 @@
    "outputs": [],
    "source": [
     "topic_defoe_df = defoe_df[defoe_df[\"typeTerm\"] == \"Topic\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are totally 19 expected topics\n",
+      "There are 11 expected topics recognised by dataframe from defoe's result\n",
+      "There are 15 expected topics recognised by dataframe from this work\n"
+     ]
+    }
+   ],
+   "source": [
+    "defoe_df_correct_topic_count = 0\n",
+    "df_correct_topic_count = 0\n",
+    "for topic in expected_topics:\n",
+    "    if topic in topic_defoe_df[\"term\"].values:\n",
+    "        defoe_df_correct_topic_count += 1\n",
+    "    if topic in new_topics[\"term\"].values:\n",
+    "        df_correct_topic_count += 1\n",
+    "print(f\"There are totally {len(expected_topics)} expected topics\")\n",
+    "print(f\"There are {defoe_df_correct_topic_count} expected topics recognised by dataframe from defoe's result\")\n",
+    "print(f\"There are {df_correct_topic_count} expected topics recognised by dataframe from this work\")"
    ],
    "metadata": {
     "collapsed": false
