--- a/Evaluation/WordErrorRate.ipynb
+++ b/Evaluation/WordErrorRate.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "print(f\"number of terms which have been successfully corrected: {len(wrongly_correct_terms)}, the success rate: {len(wrongly_correct_terms) / len(samples)}\")"
+    "print(f\"number of terms which have been wrongly corrected: {len(wrongly_correct_terms)}, the success rate: {len(wrongly_correct_terms) / len(samples)}\")"
    ],
    "metadata": {
     "collapsed": false
