--- a/Evaluation/WordErrorRate.ipynb
+++ b/Evaluation/WordErrorRate.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
@@ -294,18 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of terms which have been successfully corrected: 788, the success rate: 0.40977639105564223\n"
+      "number of terms which have been wrongly corrected: 788, the fail rate: 0.40977639105564223\n"
      ]
     }
    ],
    "source": [
-    "print(f\"number of terms which have been wrongly corrected: {len(wrongly_correct_terms)}, the success rate: {len(wrongly_correct_terms) / len(samples)}\")"
+    "print(f\"number of terms which have been wrongly corrected: {len(wrongly_correct_terms)}, the fail rate: {len(wrongly_correct_terms) / len(samples)}\")"
    ],
    "metadata": {
     "collapsed": false
